--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "jspdf": "^1.5.3",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "pdfjs-dist": "^2.2.228",
+    "vue": "^2.6.10",
+    "vue-pdf": "^4.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
